--- a/forge.jar.conf
+++ b/forge.jar.conf
@@ -1,7 +1,7 @@
 [config]
-name = [Custom] 1.12.2
+name = TNP Forge
 source = https://files.minecraftforge.net/maven/net/minecraftforge/forge/1.12.2-14.23.5.2838/forge-1.12.2-14.23.5.2838-universal.jar
-configSource = http://raw.githubusercontent.com/ValentinTh/MultiCraft-JAR-Conf/master/minecraft/vanilla/vanilla-1.14.jar.conf
+configSource = https://raw.githubusercontent.com/AK9Official/MultiCraft/master/forge.jar.conf
 
 [encoding]
 encode = utf-8
